fix the squashed img problem

--- a/styles.css
+++ b/styles.css
@@ -92,6 +92,7 @@ nav .right a:last-child {
   width: 350px;
   height: 350px;
   border-radius: 50%;
+  object-fit: cover;
 }
 
 /* SECTION 2: Skills */
